<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MergData</string>
    <string name="started_title">Hello You</string>

    <string name="started_sub_title">Nice to meet you, come join our community
        <br><b> Login</b> if you already have an account</br>
         <br><b> Register</b> to get started with the app</br>

    </string>
    <string name="todo">TODO</string>
    <string name="btn_register">Kindly fill the form</string>
    <string name="fill_the_form">Fill The Form</string>
    <string name="enter_username">Enter your Username</string>
    <string name="enter_your_location">Enter Your Location</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="place_of_birth">Place of Birth</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="non_binary">Non-binary</string>
    <string name="birth">Are you working</string>
    <string name="next_form">Next Form</string>
    <string name="submit_form">Submit Form</string>


</resources>